modify - modified hero block

--- a/monolith/templates/index.html
+++ b/monolith/templates/index.html
@@ -83,9 +83,10 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <h1>Alex Vidal</h1>
+                    <h1>Peter Chen</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Full Stack Developer</p>
+                        <p class="job-title">Web Backend Developer</p>
+                        <p class="job-title">Firmware Engineer</p>
                         <a href="#contact" class="btn btn-fill ">Hire me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
