--- a/monolith/templates/index.html
+++ b/monolith/templates/index.html
@@ -109,7 +109,17 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
-                        <p>Hello! I'm Alex, a full stuck developer, a Ruby enthusiast, and a guy slighty obsessed for code quality. Also I'm a co-founder of pykod.com. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
+                        <p>
+                            Hi! It's Peter Chen here! 
+                            I'm a second year graduate student in National Tsing Hua University. 
+                            Currently I'm with the <a href="https://logoslab.github.io/">LOGOS Lab</a> studying 
+                            high speed networks, security and blockchain design.
+                        </p>
+                        <p>
+                            I have experience in backend design and firmware design. Contact my business email
+                                <a href="mailto:peter.chen.devs@gmail.com"> peter.chen.devs@gmail.com </a>
+                            if you find my projects or work experience sounds interesting!
+                        </p>
                         <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
