add - added github link button

--- a/monolith/templates/index.html
+++ b/monolith/templates/index.html
@@ -48,32 +48,38 @@
     <header id="masthead" class="site-header" data-anchor-target=".hero" data-top="background: rgba(255,255,255,0); padding: 30px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0);" data-top-bottom="background: rgba(255,255,255,1); padding: 10px 0; box-shadow: 0px 0px 20px 6px rgba(0, 0, 0, 0.2);">
         <nav id="primary-navigation" class="site-navigation">
             <div class="container">
-                <div class="navbar-header page-scroll">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="navbar-header page-scroll">
 
-                    <button type="button" class="navbar-toggle collapsed" data-target="#portfolio-perfect-collapse" aria-expanded="false" >
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    
-                    <a href="#hero" class="site-logo"><img src="{% static 'img/logo.png' %}" alt="logo"></a>
+                            <button type="button" class="navbar-toggle collapsed" data-target="#portfolio-perfect-collapse" aria-expanded="false" >
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            
+                            <a href="#hero" class="site-logo"><img src="{% static 'img/logo.png' %}" alt="logo"></a>
 
-                </div><!-- /.navbar-header -->
+                        </div><!-- /.navbar-header -->
+                    </div>
 
-                <div class="main-menu" id="portfolio-perfect-collapse">
+                    <div class="col-md-6">
+                        <div class="main-menu" id="portfolio-perfect-collapse">
 
-                    <ul class="nav navbar-nav navbar-right">
+                            <ul class="nav navbar-nav navbar-right">
 
-                        <li class="page-scroll"><a href="#hero">Home</a></li>
-                        <li class="page-scroll"><a href="#about">About</a></li>
-                        <li class="page-scroll"><a href="#service">Service</a></li>
-                        <li class="page-scroll"><a href="#portfolio">Portfolio</a></li>
-                        <li class="page-scroll"><a href="#contact">Contact</a></li>
-                        
-                    </ul><!-- /.navbar-nav -->
+                                <li class="page-scroll"><a href="#hero">Home</a></li>
+                                <li class="page-scroll"><a href="#about">About</a></li>
+                                <li class="page-scroll"><a href="#service">Service</a></li>
+                                <li class="page-scroll"><a href="#portfolio">Portfolio</a></li>
+                                <!-- <li class="page-scroll"><a href="#contact">Contact</a></li> -->
+                                <li class="page-scroll"><a href="https://github.com/peterchen999">Github Profile</a></li>
+                                
+                            </ul><!-- /.navbar-nav -->
 
-                </div><!-- /.navbar-collapse -->
-
+                        </div><!-- /.navbar-collapse -->
+                    </div>
+                </div>
             </div>
         </nav><!-- /.primary-navigation -->
     </header><!-- /#header -->
