modify - modified hire me -> contact me

--- a/monolith/templates/index.html
+++ b/monolith/templates/index.html
@@ -93,7 +93,7 @@
                     <div class="page-scroll">
                         <p class="job-title">Web Backend Developer</p>
                         <p class="job-title">Firmware Engineer</p>
-                        <a href="#contact" class="btn btn-fill ">Hire me</a>
+                        <a href="mailto:peter.chen.devs@gmail.com" class="btn btn-fill ">Contact me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
                     </div>
