modify - modified what i do sectino

--- a/monolith/templates/index.html
+++ b/monolith/templates/index.html
@@ -195,22 +195,30 @@
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="{% static 'img/front-end.svg' %}" alt="Front End Developer">
-                            <h4>Front-end</h4>
-                            <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
+                            <h4>Backend Design</h4>
+                            <p>As a backend developer, I use frameworks such as Django, Flask, Rails...etc. to design web backend.</p>
+                            <p>These works follow software design patterns and OOP designs. Take a look at my 
+                                <a href="#portfolio">projects</a>
+                                !
+                            </p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="{% static 'img/back-end.svg' %}" alt="Back End Developer">
-                            <h4>Back-end</h4>
-                            <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
+                            <h4>Blockchain Network</h4>
+                            <p>Currently working with LOGOS Lab, I've been researching high speed yet secured P2P network solutions for Blockchain applications.</p>
+                            <p>If you're interested in these topics, feel free to contact me through my email 
+                                <a href="mailto:peter.chen.devs@gmail.com">peter.chen.devs@gmail.com</a>
+                                !
+                            </p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="{% static 'img/consultancy.svg' %}" alt="Coding">
-                            <h4>Consultancy</h4>
-                            <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
+                            <h4>DevOps</h4>
+                            <p>Some of my projects are now online for public use! I've learnt a lot during the process, including version control, CI/CD, containers, IaaS, Paas.</p>
                         </div><!-- /.service -->
                     </div>
                 </div>
