--- a/monolith/templates/index.html
+++ b/monolith/templates/index.html
@@ -228,7 +228,7 @@
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h3>My recent Works</h3>
+                    <h3>My Recent Projects</h3>
                     <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
