--- a/monolith/templates/index.html
+++ b/monolith/templates/index.html
@@ -126,7 +126,7 @@
                                 <a href="mailto:peter.chen.devs@gmail.com"> peter.chen.devs@gmail.com </a>
                             if you find my projects or work experience sounds interesting!
                         </p>
-                        <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                        <a href="https://drive.google.com/file/d/1AODXgVVqCWA9FhzDN8GMkhKkM3olsaRy/view?usp=sharing" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
             </div>
