modify - modified contact section

--- a/monolith/templates/index.html
+++ b/monolith/templates/index.html
@@ -318,22 +318,28 @@
         <section id="contact" class="site-section section-form text-center">
             <div class="container">
 
-                <h3>Contact</h3>
+                <h3>Contact Me</h3>
                 <img src="{% static 'img/lines.svg' %}" class="img-lines" alt="lines">
-                <form>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
-                        </div>
-                        <div class="col-sm-6">
-                            <input type="email" name="email" class="form-control" placeholder="Email" required>   
-                        </div>
-                        <div class="col-sm-12">
-                            <textarea name="message" id="mesaage" class="form-control" placeholder="Message" required></textarea>
-                        </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="mailto:peter.chen.devs@gmail.com" class="btn btn-border">
+                            <span class="glyphicon glyphicon-envelope"></span>
+                            Email
+                        </a>
                     </div>
-                    <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
-                </form>
+                    <div class="col-md-4">
+                        <a href="https://github.com/peterchen999" class="btn btn-border">
+                            <span class="glyphicon glyphicon-console"></span>
+                            Github Profile
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="https://www.linkedin.com/in/peter-chen-85a2b7199/" class="btn btn-border">
+                            <span class="glyphicon glyphicon-globe"></span>
+                            LinkedIn Profile
+                        </a>
+                    </div>
+                </div>
             </div>
         </section><!-- /.section-form -->
 
