modify - modified personal image

--- a/monolith/templates/index.html
+++ b/monolith/templates/index.html
@@ -99,8 +99,8 @@
                     </div>
                 </div>
             
-                <div class="col-md-6 text-right">
-                    <img src="{% static 'img/alex-vidal.png' %}" alt="alex-vidal">
+                <div class="col-md-6">
+                    <img src="{% static 'img/peter_portfolio_md1.png' %}" alt="peter">
                 </div>
 
             </div>
