--- a/productionfiles/css/style.css
+++ b/productionfiles/css/style.css
@@ -236,8 +236,8 @@ html, body {
 
 .hero .col-md-6:last-child {
     position: absolute;
+    top: 15%;
     right: 0;
-    bottom: 0;
 }
 
 .hero h1 {
@@ -254,7 +254,7 @@ html, body {
 } 
 
 .hero img {
-    height: 600px;
+    height: 800px;
 }
 
 /* SITEMAIN
